--- a/gui_testing_modified/oils.ui
+++ b/gui_testing_modified/oils.ui
@@ -54,8 +54,8 @@
     <widget class="QPushButton" name="rims">
      <property name="geometry">
       <rect>
-       <x>570</x>
-       <y>280</y>
+       <x>540</x>
+       <y>300</y>
        <width>371</width>
        <height>71</height>
       </rect>
@@ -73,7 +73,7 @@ color: rgb(0,0,0);
     <widget class="QPushButton" name="track">
      <property name="geometry">
       <rect>
-       <x>580</x>
+       <x>540</x>
        <y>400</y>
        <width>371</width>
        <height>71</height>
@@ -92,8 +92,8 @@ color: rgb(0,0,0);
     <widget class="QPushButton" name="offroad">
      <property name="geometry">
       <rect>
-       <x>580</x>
-       <y>520</y>
+       <x>540</x>
+       <y>510</y>
        <width>371</width>
        <height>71</height>
       </rect>
@@ -161,8 +161,8 @@ color: rgb(0,0,0);
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>630</x>
-       <y>70</y>
+       <x>490</x>
+       <y>100</y>
        <width>511</width>
        <height>131</height>
       </rect>
@@ -181,7 +181,7 @@ color: rgb(0,0,0);
 font: 42pt &quot;ROG Fonts&quot;;</string>
      </property>
      <property name="text">
-      <string>OILS</string>
+      <string>OIL TYPES</string>
      </property>
     </widget>
     <zorder>label_3</zorder>
