--- a/gui_testing_modified/LOGIN.ui
+++ b/gui_testing_modified/LOGIN.ui
@@ -78,31 +78,11 @@ font: 30pt &quot;ROG Fonts&quot;;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>370</y>
-     <width>211</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(225,225,225);
-font: 15pt &quot;ROG Fonts&quot;;</string>
-   </property>
-   <property name="text">
-    <string>User Type :</string>
-   </property>
-   <property name="scaledContents">
-    <bool>false</bool>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>450</y>
+     <x>330</x>
+     <y>390</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -121,8 +101,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>530</y>
+     <x>290</x>
+     <y>470</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -141,8 +121,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLineEdit" name="Email">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>450</y>
+     <x>520</x>
+     <y>390</y>
      <width>391</width>
      <height>41</height>
     </rect>
@@ -154,8 +134,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLineEdit" name="Password">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>530</y>
+     <x>520</x>
+     <y>470</y>
      <width>391</width>
      <height>41</height>
     </rect>
@@ -170,8 +150,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QPushButton" name="SignIN">
    <property name="geometry">
     <rect>
-     <x>750</x>
-     <y>590</y>
+     <x>530</x>
+     <y>570</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -180,7 +160,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
     <string notr="true">font: 10pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
    <property name="text">
-    <string>Sign In</string>
+    <string>Log In</string>
    </property>
    <property name="icon">
     <iconset>
@@ -206,29 +186,6 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
     <iconset>
      <normaloff>../Downloads/back-undo-return-button-png-5.png</normaloff>../Downloads/back-undo-return-button-png-5.png</iconset>
    </property>
-  </widget>
-  <widget class="QComboBox" name="UserType">
-   <property name="geometry">
-    <rect>
-     <x>500</x>
-     <y>360</y>
-     <width>391</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
-   </property>
-   <item>
-    <property name="text">
-     <string>Customer</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>ADMIN</string>
-    </property>
-   </item>
   </widget>
   <widget class="Line" name="line">
    <property name="geometry">
