--- a/gui_testing_modified/confirmation.ui
+++ b/gui_testing_modified/confirmation.ui
@@ -35,9 +35,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>0</x>
      <y>190</y>
-     <width>931</width>
+     <width>1201</width>
      <height>121</height>
     </rect>
    </property>
@@ -46,7 +46,7 @@
 font: 22pt &quot;MS Shell dig 2&quot;;</string>
    </property>
    <property name="text">
-    <string>Item will be delivered in 2 days.</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;THANK YOU FOR YOUR ORDER&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;It will be delivered within 15 days&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
@@ -55,7 +55,7 @@ font: 22pt &quot;MS Shell dig 2&quot;;</string>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>390</x>
+     <x>250</x>
      <y>610</y>
      <width>931</width>
      <height>121</height>
@@ -75,7 +75,7 @@ font: 22pt &quot;ROG Fonts&quot;;</string>
   <widget class="QPushButton" name="BUY">
    <property name="geometry">
     <rect>
-     <x>970</x>
+     <x>830</x>
      <y>650</y>
      <width>41</width>
      <height>41</height>
@@ -90,6 +90,42 @@ font: 22pt &quot;ROG Fonts&quot;;</string>
    <property name="icon">
     <iconset>
      <normaloff>home.png</normaloff>home.png</iconset>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>20</y>
+     <width>1201</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(191, 191, 191);
+font: 42pt &quot;Asus Rog&quot;;</string>
+   </property>
+   <property name="text">
+    <string>TORQUE CART</string>
+   </property>
+   <property name="scaledContents">
+    <bool>false</bool>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>140</y>
+     <width>971</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
    </property>
   </widget>
  </widget>
