--- a/gui_testing_modified/Suspension.ui
+++ b/gui_testing_modified/Suspension.ui
@@ -51,7 +51,7 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="rims">
+    <widget class="QPushButton" name="offroad">
      <property name="geometry">
       <rect>
        <x>550</x>
@@ -70,7 +70,7 @@ color: rgb(0,0,0);
       <string>OFF ROAD SUSPENSION</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="track">
+    <widget class="QPushButton" name="air">
      <property name="geometry">
       <rect>
        <x>550</x>
@@ -89,7 +89,7 @@ color: rgb(0,0,0);
       <string>AIR SUSPENSION</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="offroad">
+    <widget class="QPushButton" name="track">
      <property name="geometry">
       <rect>
        <x>550</x>
@@ -184,9 +184,9 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
     </widget>
     <zorder>label_3</zorder>
     <zorder>label</zorder>
-    <zorder>rims</zorder>
-    <zorder>track</zorder>
     <zorder>offroad</zorder>
+    <zorder>air</zorder>
+    <zorder>track</zorder>
     <zorder>back</zorder>
     <zorder>label_2</zorder>
    </widget>
