--- a/gui_testing_modified/CART.ui
+++ b/gui_testing_modified/CART.ui
@@ -234,6 +234,46 @@ color: rgb(0, 0, 0);</string>
     </property>
    </item>
   </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>430</y>
+     <width>461</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(191, 191, 191);
+font: 20pt &quot;ROG Fonts&quot;;</string>
+   </property>
+   <property name="text">
+    <string>total amount (INR) :</string>
+   </property>
+   <property name="scaledContents">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="amount">
+   <property name="geometry">
+    <rect>
+     <x>780</x>
+     <y>420</y>
+     <width>461</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(191, 191, 191);
+font: 20pt &quot;ROG Fonts&quot;;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="scaledContents">
+    <bool>false</bool>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
