--- a/gui_testing_modified/offroad suspension.ui
+++ b/gui_testing_modified/offroad suspension.ui
@@ -88,7 +88,7 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="os1">
+   <widget class="QPushButton" name="SignIN">
     <property name="geometry">
      <rect>
       <x>900</x>
@@ -184,7 +184,7 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="os2">
+   <widget class="QPushButton" name="SignIN_2">
     <property name="geometry">
      <rect>
       <x>900</x>
@@ -213,7 +213,7 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
       <normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</iconset>
     </property>
    </widget>
-   <widget class="QPushButton" name="os3">
+   <widget class="QPushButton" name="SignIN_3">
     <property name="geometry">
      <rect>
       <x>900</x>
