--- a/gui_testing_modified/exhaust.ui
+++ b/gui_testing_modified/exhaust.ui
@@ -32,7 +32,7 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QPushButton" name="rims">
+    <widget class="QPushButton" name="sliponbutton">
      <property name="geometry">
       <rect>
        <x>500</x>
@@ -51,7 +51,7 @@ color: rgb(0,0,0);
       <string>SLIP ON EXHAUST</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="track">
+    <widget class="QPushButton" name="fullsysbutton">
      <property name="geometry">
       <rect>
        <x>500</x>
@@ -145,7 +145,7 @@ color: rgb(0,0,0);
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QLabel" name="label_4">
+    <widget class="QLabel" name="factorybutton">
      <property name="geometry">
       <rect>
        <x>-10</x>
@@ -208,9 +208,9 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
       <string>EXHAUSTS</string>
      </property>
     </widget>
-    <zorder>label_4</zorder>
-    <zorder>rims</zorder>
-    <zorder>track</zorder>
+    <zorder>factorybutton</zorder>
+    <zorder>sliponbutton</zorder>
+    <zorder>fullsysbutton</zorder>
     <zorder>back</zorder>
     <zorder>offroad</zorder>
     <zorder>label_3</zorder>
