--- a/gui_testing_modified/CART.ui
+++ b/gui_testing_modified/CART.ui
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>-90</x>
-     <y>-20</y>
+     <x>-70</x>
+     <y>0</y>
      <width>1541</width>
      <height>831</height>
     </rect>
@@ -35,8 +35,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>50</y>
+     <x>570</x>
+     <y>30</y>
      <width>931</width>
      <height>121</height>
     </rect>
@@ -55,8 +55,8 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
   <widget class="QPushButton" name="BUY">
    <property name="geometry">
     <rect>
-     <x>1070</x>
-     <y>690</y>
+     <x>1120</x>
+     <y>720</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -75,172 +75,187 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
   <widget class="QTableWidget" name="ProductList">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>210</y>
-     <width>651</width>
-     <height>191</height>
+     <x>230</x>
+     <y>160</y>
+     <width>931</width>
+     <height>521</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;
 color: rgb(0, 0, 0);</string>
    </property>
-   <row>
-    <property name="text">
-     <string>1</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>2</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>3</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>4</string>
-    </property>
-   </row>
+   <property name="rowCount">
+    <number>100</number>
+   </property>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
+   <row/>
    <column>
     <property name="text">
      <string>TYPE</string>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
    </column>
    <column>
     <property name="text">
      <string>SUBTYPE</string>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
    </column>
    <column>
     <property name="text">
      <string>ITEM</string>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
    </column>
    <column>
     <property name="text">
      <string>QUANTITY</string>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
    </column>
    <column>
     <property name="text">
      <string>AMOUNT</string>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
    </column>
-   <item row="0" column="0">
-    <property name="textAlignment">
-     <set>AlignCenter</set>
-    </property>
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="0" column="1">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="0" column="2">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="0" column="3">
-    <property name="flags">
-     <set>ItemIsSelectable|ItemIsEditable|ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
-    </property>
-   </item>
-   <item row="0" column="4">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="1" column="0">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="1" column="1">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="1" column="2">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="1" column="3">
-    <property name="flags">
-     <set>ItemIsSelectable|ItemIsEditable|ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
-    </property>
-   </item>
-   <item row="1" column="4">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="2" column="0">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="2" column="1">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="2" column="2">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="2" column="3">
-    <property name="flags">
-     <set>ItemIsSelectable|ItemIsEditable|ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
-    </property>
-   </item>
-   <item row="2" column="4">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="3" column="0">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="3" column="1">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="3" column="2">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
-   <item row="3" column="3">
-    <property name="flags">
-     <set>ItemIsSelectable|ItemIsEditable|ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
-    </property>
-   </item>
-   <item row="3" column="4">
-    <property name="flags">
-     <set>NoItemFlags</set>
-    </property>
-   </item>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>430</y>
+     <x>120</x>
+     <y>720</y>
      <width>461</width>
-     <height>121</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -257,10 +272,10 @@ font: 20pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLabel" name="amount">
    <property name="geometry">
     <rect>
-     <x>780</x>
-     <y>420</y>
-     <width>461</width>
-     <height>121</height>
+     <x>600</x>
+     <y>720</y>
+     <width>421</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
