--- a/gui_testing_modified/street tyres.ui
+++ b/gui_testing_modified/street tyres.ui
@@ -187,7 +187,7 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
       <normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</iconset>
     </property>
    </widget>
-   <widget class="QPushButton" name="SignIN_3">
+   <widget class="QPushButton" name="add_18">
     <property name="geometry">
      <rect>
       <x>740</x>
