--- a/gui_testing_modified/factory exhausts.ui
+++ b/gui_testing_modified/factory exhausts.ui
@@ -88,7 +88,7 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="SignIN">
+   <widget class="QPushButton" name="add_46">
     <property name="geometry">
      <rect>
       <x>900</x>
@@ -185,7 +185,7 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="SignIN_2">
+   <widget class="QPushButton" name="add_47">
     <property name="geometry">
      <rect>
       <x>900</x>
@@ -214,7 +214,7 @@ font: 9pt &quot;MS Shell Dlg 2&quot;;</string>
       <normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</normaloff>../../../../../../../Downloads/back-undo-return-button-png-5.png</iconset>
     </property>
    </widget>
-   <widget class="QPushButton" name="SignIN_3">
+   <widget class="QPushButton" name="add_48">
     <property name="geometry">
      <rect>
       <x>900</x>
