--- a/gui_testing_modified/exhaust.ui
+++ b/gui_testing_modified/exhaust.ui
@@ -164,7 +164,7 @@ color: rgb(0,0,0);
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="factorybutton_2">
      <property name="geometry">
       <rect>
        <x>500</x>
@@ -214,7 +214,7 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
     <zorder>back</zorder>
     <zorder>offroad</zorder>
     <zorder>label_3</zorder>
-    <zorder>pushButton</zorder>
+    <zorder>factorybutton_2</zorder>
     <zorder>label_2</zorder>
    </widget>
   </widget>
