--- a/gui_testing_modified/SIGNUP.ui
+++ b/gui_testing_modified/SIGNUP.ui
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>-140</x>
-     <y>-30</y>
+     <x>-130</x>
+     <y>0</y>
      <width>1541</width>
      <height>831</height>
     </rect>
@@ -35,15 +35,15 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>40</y>
+     <x>10</x>
+     <y>30</y>
      <width>1201</width>
      <height>121</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(191, 191, 191);
-font: 42pt &quot;Asus Rog&quot;;</string>
+font: 42pt &quot;ROG Fonts&quot;;</string>
    </property>
    <property name="text">
     <string>TORQUE CART</string>
@@ -59,7 +59,7 @@ font: 42pt &quot;Asus Rog&quot;;</string>
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>210</y>
+     <y>160</y>
      <width>1201</width>
      <height>121</height>
     </rect>
@@ -82,7 +82,7 @@ font: 30pt &quot;ROG Fonts&quot;;</string>
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>600</y>
+     <y>560</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -101,8 +101,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLineEdit" name="Password">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>600</y>
+     <x>490</x>
+     <y>560</y>
      <width>391</width>
      <height>41</height>
     </rect>
@@ -117,8 +117,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QPushButton" name="SignIN">
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>690</y>
+     <x>570</x>
+     <y>660</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -138,7 +138,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>190</y>
+     <y>150</y>
      <width>971</width>
      <height>31</height>
     </rect>
@@ -151,7 +151,7 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>290</y>
+     <y>240</y>
      <width>441</width>
      <height>81</height>
     </rect>
@@ -170,8 +170,8 @@ font: 15pt &quot;Oswald SemiBold&quot;;</string>
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>520</y>
+     <x>350</x>
+     <y>480</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -190,8 +190,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLineEdit" name="Email_2">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>520</y>
+     <x>490</x>
+     <y>480</y>
      <width>391</width>
      <height>41</height>
     </rect>
@@ -203,8 +203,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>440</y>
+     <x>270</x>
+     <y>400</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -223,8 +223,8 @@ font: 15pt &quot;ROG Fonts&quot;;</string>
   <widget class="QLineEdit" name="Email_3">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>440</y>
+     <x>490</x>
+     <y>400</y>
      <width>391</width>
      <height>41</height>
     </rect>
