--- a/gui_testing_modified/Steeringg.ui
+++ b/gui_testing_modified/Steeringg.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1225</width>
-    <height>784</height>
+    <width>1227</width>
+    <height>818</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -54,8 +54,8 @@
     <widget class="QPushButton" name="track">
      <property name="geometry">
       <rect>
-       <x>480</x>
-       <y>240</y>
+       <x>500</x>
+       <y>310</y>
        <width>461</width>
        <height>71</height>
       </rect>
@@ -73,8 +73,8 @@ color: rgb(0,0,0);
     <widget class="QPushButton" name="drift">
      <property name="geometry">
       <rect>
-       <x>480</x>
-       <y>340</y>
+       <x>500</x>
+       <y>420</y>
        <width>461</width>
        <height>71</height>
       </rect>
@@ -92,8 +92,8 @@ color: rgb(0,0,0);
     <widget class="QPushButton" name="carbon">
      <property name="geometry">
       <rect>
-       <x>480</x>
-       <y>440</y>
+       <x>500</x>
+       <y>530</y>
        <width>461</width>
        <height>71</height>
       </rect>
@@ -119,11 +119,11 @@ color: rgb(0,0,0);
       <string>CARBON UPGRADED STEERING</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="back">
+    <widget class="QPushButton" name="SteeringBack">
      <property name="geometry">
       <rect>
-       <x>1090</x>
-       <y>620</y>
+       <x>1100</x>
+       <y>650</y>
        <width>111</width>
        <height>41</height>
       </rect>
@@ -142,8 +142,8 @@ color: rgb(0,0,0);
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>350</x>
-       <y>80</y>
+       <x>330</x>
+       <y>110</y>
        <width>801</width>
        <height>111</height>
       </rect>
@@ -190,7 +190,7 @@ font: 42pt &quot;ROG Fonts&quot;;
     <zorder>track</zorder>
     <zorder>drift</zorder>
     <zorder>carbon</zorder>
-    <zorder>back</zorder>
+    <zorder>SteeringBack</zorder>
     <zorder>label_2</zorder>
    </widget>
   </widget>
@@ -199,7 +199,7 @@ font: 42pt &quot;ROG Fonts&quot;;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1225</width>
+     <width>1227</width>
      <height>26</height>
     </rect>
    </property>
