--- a/gui_testing_modified/exhaust.ui
+++ b/gui_testing_modified/exhaust.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1219</width>
-    <height>801</height>
+    <width>1222</width>
+    <height>817</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,7 +36,7 @@
      <property name="geometry">
       <rect>
        <x>500</x>
-       <y>280</y>
+       <y>300</y>
        <width>421</width>
        <height>71</height>
       </rect>
@@ -55,7 +55,7 @@ color: rgb(0,0,0);
      <property name="geometry">
       <rect>
        <x>500</x>
-       <y>380</y>
+       <y>400</y>
        <width>421</width>
        <height>71</height>
       </rect>
@@ -70,11 +70,11 @@ color: rgb(0,0,0);
       <string>FULL EXHAUST SYSTEM</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="back">
+    <widget class="QPushButton" name="ExhaustBack">
      <property name="geometry">
       <rect>
        <x>1110</x>
-       <y>660</y>
+       <y>680</y>
        <width>111</width>
        <height>41</height>
       </rect>
@@ -168,7 +168,7 @@ color: rgb(0,0,0);
      <property name="geometry">
       <rect>
        <x>500</x>
-       <y>480</y>
+       <y>510</y>
        <width>421</width>
        <height>71</height>
       </rect>
@@ -211,7 +211,7 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
     <zorder>factorybutton</zorder>
     <zorder>sliponbutton</zorder>
     <zorder>fullsysbutton</zorder>
-    <zorder>back</zorder>
+    <zorder>ExhaustBack</zorder>
     <zorder>offroad</zorder>
     <zorder>label_3</zorder>
     <zorder>factorybutton_2</zorder>
@@ -223,7 +223,7 @@ font: 42pt &quot;ROG Fonts&quot;;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1219</width>
+     <width>1222</width>
      <height>26</height>
     </rect>
    </property>
